force-app/main/default/objects/Product_Group__c/fields/Brand__c.field-meta.xml
<CustomField>
    <fullName>Brand__c</fullName>
    <label>Brand</label>
    <type>Picklist</type>
    <valueSet>
        <controllingField>Branded__c</controllingField>
        <restricted>true</restricted>
        <valueSetDefinition>
            <sorted>true</sorted>
            <value>
                <fullName>7-ELEVEN</fullName>
            </value>
            <value>
                <fullName>Advance Pierre</fullName>
            </value>
            <value>
                <fullName>Ahold</fullName>
            </value>
            <value>
                <fullName>Aldi</fullName>
            </value>
            <value>
                <fullName>Allen Brothers Angus</fullName>
            </value>
            <value>
                <fullName>Angus Pride</fullName>
            </value>
            <value>
                <fullName>Applebee&#39;s</fullName>
            </value>
            <value>
                <fullName>Arby&#39;s</fullName>
            </value>
            <value>
                <fullName>Archer Farms</fullName>
            </value>
            <value>
                <fullName>Bachoco</fullName>
            </value>
            <value>
                <fullName>Bakers &amp; Chef</fullName>
            </value>
            <value>
                <fullName>Beef O&#39; Brady</fullName>
            </value>
            <value>
                <fullName>Best Choice</fullName>
            </value>
            <value>
                <fullName>Blackwell Angus</fullName>
            </value>
            <value>
                <fullName>Bob Evan&#39;s</fullName>
            </value>
            <value>
                <fullName>Boston Market</fullName>
            </value>
            <value>
                <fullName>Breeder</fullName>
            </value>
            <value>
                <fullName>Brinker</fullName>
            </value>
            <value>
                <fullName>Brookshires Grocery</fullName>
            </value>
            <value>
                <fullName>Butcher Block Reserve Ang</fullName>
            </value>
            <value>
                <fullName>C/R INGREDIENTS FOR VA</fullName>
            </value>
            <value>
                <fullName>Campbell&#39;s</fullName>
            </value>
            <value>
                <fullName>Cargill Premium Beef</fullName>
            </value>
            <value>
                <fullName>Cargill Value Added Meats</fullName>
            </value>
            <value>
                <fullName>Case Ready Grind Patties</fullName>
            </value>
            <value>
                <fullName>Castle Wood Reserve</fullName>
            </value>
            <value>
                <fullName>CC</fullName>
            </value>
            <value>
                <fullName>Cert Angus Bf Path Proven</fullName>
            </value>
            <value>
                <fullName>Certified Angus Beef</fullName>
            </value>
            <value>
                <fullName>Charter Reserve</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>