force-app/main/default/objects/Product_Group__c/fields/Branded__c.field-meta.xml
<CustomField>
    <fullName>Branded__c</fullName>
    <label>Branded</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Branded</fullName>
            </value>
            <value>
                <fullName>Unbranded</fullName>
            </value>
            <value>
                <fullName>Private Label</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>