force-app/main/default/objects/Product_Group__c/fields/Grade__c.field-meta.xml
<CustomField>
    <fullName>Grade__c</fullName>
    <description>Grade Description - LOV</description>
    <label>Grade</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>A Canadian</fullName>
            </value>
            <value>
                <fullName>A Grade Whole Birds</fullName>
            </value>
            <value>
                <fullName>AA Canadian</fullName>
            </value>
            <value>
                <fullName>AAA Canadian</fullName>
            </value>
            <value>
                <fullName>Angus</fullName>
            </value>
            <value>
                <fullName>B Grade Whole Birds/Plant Grade</fullName>
            </value>
            <value>
                <fullName>Blended Gr Beef</fullName>
            </value>
            <value>
                <fullName>Boner</fullName>
            </value>
            <value>
                <fullName>Certified Angus Beef</fullName>
            </value>
            <value>
                <fullName>Choice</fullName>
            </value>
            <value>
                <fullName>Cutter/Canner</fullName>
            </value>
            <value>
                <fullName>Down Grade</fullName>
            </value>
            <value>
                <fullName>FSO Pricing System</fullName>
            </value>
            <value>
                <fullName>Genuine Texas Beef</fullName>
            </value>
            <value>
                <fullName>Ground Beef</fullName>
            </value>
            <value>
                <fullName>Import</fullName>
            </value>
            <value>
                <fullName>Line Run</fullName>
            </value>
            <value>
                <fullName>No Grade</fullName>
            </value>
            <value>
                <fullName>No Roll</fullName>
            </value>
            <value>
                <fullName>Not Applicable</fullName>
            </value>
            <value>
                <fullName>Prime</fullName>
            </value>
            <value>
                <fullName>Prime Canadian</fullName>
            </value>
            <value>
                <fullName>Rancher&#39;s Registery</fullName>
            </value>
            <value>
                <fullName>Select</fullName>
            </value>
            <value>
                <fullName>Sterling Silver</fullName>
            </value>
            <value>
                <fullName>Trim</fullName>
            </value>
            <value>
                <fullName>Undergrade</fullName>
            </value>
            <value>
                <fullName>Undergrade Canadian</fullName>
            </value>
            <value>
                <fullName>Utility</fullName>
            </value>
            <value>
                <fullName>White cow</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>