force-app/main/default/objects/Product_Group__c/fields/Product_Family__c.field-meta.xml
<CustomField>
    <fullName>Product_Family__c</fullName>
    <description>Product Family</description>
    <label>Product Family</label>
    <type>Picklist</type>
    <valueSet>
        <controllingField>Protein_Category__c</controllingField>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Casing cooked</fullName>
            </value>
            <value>
                <fullName>Chub</fullName>
            </value>
            <value>
                <fullName>Diced</fullName>
            </value>
            <value>
                <fullName>Fry</fullName>
            </value>
            <value>
                <fullName>Liquid Egg</fullName>
            </value>
            <value>
                <fullName>Loaf</fullName>
            </value>
            <value>
                <fullName>Marinated</fullName>
            </value>
            <value>
                <fullName>Patty</fullName>
            </value>
            <value>
                <fullName>Prepared Egg</fullName>
            </value>
            <value>
                <fullName>Rib</fullName>
            </value>
            <value>
                <fullName>Shell Egg</fullName>
            </value>
            <value>
                <fullName>Strip</fullName>
            </value>
            <value>
                <fullName>65% - 75%</fullName>
            </value>
            <value>
                <fullName>76% - 83%</fullName>
            </value>
            <value>
                <fullName>84% - 89%</fullName>
            </value>
            <value>
                <fullName>90% +</fullName>
            </value>
            <value>
                <fullName>Assorted</fullName>
            </value>
            <value>
                <fullName>Block</fullName>
            </value>
            <value>
                <fullName>Bone in Breast</fullName>
            </value>
            <value>
                <fullName>Bone-in</fullName>
            </value>
            <value>
                <fullName>Boneless</fullName>
            </value>
            <value>
                <fullName>Bones</fullName>
            </value>
            <value>
                <fullName>Breaded</fullName>
            </value>
            <value>
                <fullName>Breakfast</fullName>
            </value>
            <value>
                <fullName>Breast</fullName>
            </value>
            <value>
                <fullName>Brisket</fullName>
            </value>
            <value>
                <fullName>BTFT</fullName>
            </value>
            <value>
                <fullName>Bulk</fullName>
            </value>
            <value>
                <fullName>Butterfly</fullName>
            </value>
            <value>
                <fullName>Carne</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>