force-app/main/default/objects/Product_Group__c/fields/Protein__c.field-meta.xml
<CustomField>
    <fullName>Protein__c</fullName>
    <description>Protein&#39;s</description>
    <label>Protein</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Turkey</fullName>
            </value>
            <value>
                <fullName>Beef</fullName>
            </value>
            <value>
                <fullName>Chicken</fullName>
            </value>
            <value>
                <fullName>Pork</fullName>
            </value>
            <value>
                <fullName>Eggs</fullName>
            </value>
            <value>
                <fullName>Others</fullName>
            </value>
            <value>
                <fullName>CFD - All</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>