force-app/main/default/objects/Product_Group__c/fields/Protein_Category__c.field-meta.xml
<CustomField>
    <fullName>Protein_Category__c</fullName>
    <label>Protein Category</label>
    <type>Picklist</type>
    <valueSet>
        <controllingField>Sub_Protein__c</controllingField>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Beef-Case Ready Grinds</fullName>
            </value>
            <value>
                <fullName>Beef-Case Ready Muscle</fullName>
            </value>
            <value>
                <fullName>Beef-Case Ready Sausage</fullName>
            </value>
            <value>
                <fullName>Beef-Commodity Grind</fullName>
            </value>
            <value>
                <fullName>Beef-Continuous Cooked</fullName>
            </value>
            <value>
                <fullName>Beef-Cooked Batch</fullName>
            </value>
            <value>
                <fullName>Beef-FP Roast</fullName>
            </value>
            <value>
                <fullName>Beef-FTB</fullName>
            </value>
            <value>
                <fullName>Beef-Hides</fullName>
            </value>
            <value>
                <fullName>Beef-Muscle Meat</fullName>
            </value>
            <value>
                <fullName>Beef-Other</fullName>
            </value>
            <value>
                <fullName>Beef-Rendered</fullName>
            </value>
            <value>
                <fullName>Beef-Trim</fullName>
            </value>
            <value>
                <fullName>Beef-Value Added Muscle</fullName>
            </value>
            <value>
                <fullName>Beef-Value Add Grind</fullName>
            </value>
            <value>
                <fullName>Beef-Variety Meat</fullName>
            </value>
            <value>
                <fullName>Chicken-Canadian Poultry</fullName>
            </value>
            <value>
                <fullName>Chicken-Case Ready Grind</fullName>
            </value>
            <value>
                <fullName>Chicken-Case Ready Muscle</fullName>
            </value>
            <value>
                <fullName>Chicken-Continuous Cooked</fullName>
            </value>
            <value>
                <fullName>Chicken-Cooked Batch</fullName>
            </value>
            <value>
                <fullName>Chicken-Mechanically Separated</fullName>
            </value>
            <value>
                <fullName>Chicken-Other</fullName>
            </value>
            <value>
                <fullName>Egg-Secondary Other-Egg Processed</fullName>
            </value>
            <value>
                <fullName>Egg-Value Added Cooked-Egg Processed</fullName>
            </value>
            <value>
                <fullName>Egg-Value Added-Egg Processed</fullName>
            </value>
            <value>
                <fullName>Other-Case Ready</fullName>
            </value>
            <value>
                <fullName>Other-Services</fullName>
            </value>
            <value>
                <fullName>Other-Specialty</fullName>
            </value>
            <value>
                <fullName>Other-Value Added</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>