force-app/main/default/objects/Product_Group__c/fields/Sub_Protein__c.field-meta.xml
<CustomField>
    <fullName>Sub_Protein__c</fullName>
    <label>Sub Protein</label>
    <type>Picklist</type>
    <valueSet>
        <controllingField>Protein__c</controllingField>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Beef-Case Ready</fullName>
            </value>
            <value>
                <fullName>Beef-Grinds</fullName>
            </value>
            <value>
                <fullName>Beef-Primary Beef</fullName>
            </value>
            <value>
                <fullName>Beef-Secondary Other</fullName>
            </value>
            <value>
                <fullName>Beef-Specialty</fullName>
            </value>
            <value>
                <fullName>Beef-Value Added</fullName>
            </value>
            <value>
                <fullName>Beef-Value Added Cooked</fullName>
            </value>
            <value>
                <fullName>CFD - All-Distribution</fullName>
            </value>
            <value>
                <fullName>Chicken-Primary</fullName>
            </value>
            <value>
                <fullName>Chicken-Case Ready</fullName>
            </value>
            <value>
                <fullName>Chicken-Value Added Cooked</fullName>
            </value>
            <value>
                <fullName>Chicken-Specialty</fullName>
            </value>
            <value>
                <fullName>Egg-Secondary Other</fullName>
            </value>
            <value>
                <fullName>Egg-Value Added</fullName>
            </value>
            <value>
                <fullName>Egg-Value Added Cooked</fullName>
            </value>
            <value>
                <fullName>Other-Seafood</fullName>
            </value>
            <value>
                <fullName>Other-Dairy</fullName>
            </value>
            <value>
                <fullName>Other-Lamb</fullName>
            </value>
            <value>
                <fullName>Other-Mixed</fullName>
            </value>
            <value>
                <fullName>Other-Other</fullName>
            </value>
            <value>
                <fullName>Other-Veal</fullName>
            </value>
            <value>
                <fullName>Pork-Case Ready</fullName>
            </value>
            <value>
                <fullName>Pork-Specialty</fullName>
            </value>
            <value>
                <fullName>Pork-Value Added Cooked</fullName>
            </value>
            <value>
                <fullName>Turkey-Case Ready</fullName>
            </value>
            <value>
                <fullName>Turkey-Grinds</fullName>
            </value>
            <value>
                <fullName>Turkey-Primary Turkey</fullName>
            </value>
            <value>
                <fullName>Turkey-Specialty</fullName>
            </value>
            <value>
                <fullName>Turkey-Value Added</fullName>
            </value>
            <value>
                <fullName>Turkey-Value Added Cooked</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>