force-app/main/default/objects/Product_Group__c/fields/Unit_of_Mesure__c.field-meta.xml
<CustomField>
    <fullName>Unit_of_Mesure__c</fullName>
    <description>Single Value Pick list of Unit of Measure values</description>
    <label>Unit of Measure</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>UnitOfMeasure</valueSetName>
    </valueSet>
</CustomField>