force-app/main/default/objects/Product_Group__c/validationRules/OpportunityLineItem_Existed.validationRule-meta.xml
<ValidationRule>
    <fullName>OpportunityLineItem_Existed</fullName>
    <active>true</active>
    <description>Opportunity Products added to opportunity,Then cannot add Product Group records</description>
    <errorConditionFormula>Opportunity__r.HasOpportunityLineItem 
 || Opportunity__r.HasOpportunityProductRequest__c</errorConditionFormula>
    <errorMessage>Opportunity Products or Product Requests are associated to opportunity,You cannot add Product Group records.</errorMessage>
</ValidationRule>